--- a/web/state.html
+++ b/web/state.html
@@ -23,6 +23,7 @@
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="http://d3js.org/queue.v1.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script src="lib/underscore-min.js"></script>
     <script src="main.js"></script>
 
 </body>
